add: reload, animation

--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,7 @@ body {
 }
 
 nav {
+  position: fixed;
   width: 100%;
   height: 50px;
   background-color: #fff;
@@ -44,7 +45,7 @@ nav>ul>li.active {
 }
 
 .main-container {
-  padding: 80px 0 0 80px;
+  padding: 130px 0 0 80px;
   margin: 0 auto;
 }
 
@@ -54,12 +55,17 @@ nav>ul>li.active {
   margin: 10px;
 }
 
+.tab-item .thumb:hover {
+  transform:scale(1.05,1.05);
+}
+
 .tab-item .thumb {
+  position: relative;
   width: 200px;
   height: 150px;
   border: 1px solid #e3e4e5;
   border-radius: 5px;
-  background-color: pink;
+  background-color: #e2e2e2;
   cursor: pointer;
   overflow: hidden;
 }
@@ -69,12 +75,35 @@ nav>ul>li.active {
   width: auto;
 }
 
+.tab-item .refresh {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #333;
+  color:#fff;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  font-size: 14px;
+  border-radius: 50%;
+  opacity: 0;
+  margin: 2px;
+}
+
+.tab-item:hover .refresh {
+  opacity: 0.5;
+}
+
+.tab-item .refresh:hover {
+  opacity: 1;
+}
+
 .tab-item .title {
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
     line-height: 24px;
     color: #333;
-    background: wheat;
+    background: rgba(248, 250, 253, 0.88);
     border-radius: 15px;
     margin-top: 5px;
     text-overflow: ellipsis;
@@ -82,5 +111,12 @@ nav>ul>li.active {
     width: 90%;
     margin: 5px auto;
     overflow: hidden;
-    padding: 3px;
+    padding: 2px;
+}
+
+.tab-item .add {
+  text-align: center;
+  line-height: 128px;
+  font-size: 65px;
+  color: #0098df;
 }
