--- a/styles/index.css
+++ b/styles/index.css
@@ -103,20 +103,29 @@ nav>ul>li.active {
   opacity: 1;
 }
 
-.tab-item .title {
+.tab-item .title {    
+    display: block;
     font-size: 14px;
     text-align: center;
-    line-height: 24px;
+    width: 70%;
+    max-width: 100%;
+    height: 24px;
     color: #333;
     background: rgba(248, 250, 253, 0.88);
     border-radius: 15px;
-    margin-top: 5px;
     text-overflow: ellipsis;
-    white-space: nowrap;
-    width: 90%;
+    white-space: nowrap;    
     margin: 5px auto;
     overflow: hidden;
     padding: 2px;
+    border: 0;
+    outline: none;
+}
+
+.tab-item input:focus {
+  width: 100%;
+  border: 1px solid #0098df;
+  background-color: #fff;
 }
 
 .tab-item .add {
