--- a/styles/index.css
+++ b/styles/index.css
@@ -173,3 +173,32 @@ nav>ul>li.active {
 .bookmark-add-panel .left .btn {
   vertical-align: middle;
 }
+
+.context-menu {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 250px;
+  border: 1px solid #e3e4e5;
+  background-color: #fff;
+  color: #333;
+  font-size: 14px;
+  box-shadow: 3px 3px 5px #332;
+}
+
+.context-menu.hide {
+  display: none;
+}
+
+.context-menu ul {
+  list-style: none;
+}
+
+.context-menu li {
+  padding: 5px 20px;
+  cursor: default;
+}
+
+.context-menu li:hover {
+  background-color: #e3e4e5;
+}
