--- a/views/template/contextMenu.html
+++ b/views/template/contextMenu.html
@@ -2,6 +2,6 @@
   <ul click-out="hideMenu()">
     <li ng-click="command('open')">打开(<u>O</u>)</li>
     <li ng-click="command('openInNewTabActive')">在新标签页中打开(<u>I</u>)</li>
-    <li ng-click="command('open')">在后台标签中打开(<u>B</u>)</li>
+    <li ng-click="command('openInNewTabBackground')">在后台标签中打开(<u>B</u>)</li>
   </ul>
 </div>
