--- a/styles/index.css
+++ b/styles/index.css
@@ -50,14 +50,22 @@ nav>ul>li.active {
 }
 
 .main-container {
-  padding: 130px 0 150px 80px;
+  padding: 100px 0;
+  width: 80%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .tab-item {
-  float: left;
-  width: 200px;
+  width: 220px;
   margin: 10px;
+}
+
+.tab-item-hiden {
+  height: 0;
 }
 
 .tab-item .thumb:hover {
@@ -66,7 +74,7 @@ nav>ul>li.active {
 
 .tab-item .thumb {
   position: relative;
-  width: 200px;
+  width: 100%;
   height: 150px;
   border: 1px solid #e3e4e5;
   border-radius: 5px;
